--- a/zivo/package.json
+++ b/zivo/package.json
@@ -23,6 +23,7 @@
     "@react-navigation/native-stack": "^7.3.8",
     "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "expo": "~52.0.42",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
@@ -30,6 +31,7 @@
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-router": "^4.0.20",
+    "expo-secure-store": "^14.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
     "expo-symbols": "~0.2.2",
