--- a/zivo/package.json
+++ b/zivo/package.json
@@ -18,6 +18,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-cookies/cookies": "^6.2.1",
+    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.1.6",
     "@react-navigation/native-stack": "^7.3.8",
@@ -29,6 +30,7 @@
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
+    "expo-image": "^2.1.6",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.4",
@@ -45,14 +47,14 @@
     "react-native": "0.79.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-maps": "1.20.1",
+    "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "@react-native-picker/picker": "2.11.0"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
