--- a/zivo/package.json
+++ b/zivo/package.json
@@ -25,6 +25,7 @@
     "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "expo": "^53.0.5",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
@@ -32,6 +33,7 @@
     "expo-haptics": "~14.1.4",
     "expo-image": "^2.1.6",
     "expo-image-picker": "^16.1.4",
+    "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.4",
     "expo-location": "~18.1.4",
     "expo-router": "~5.0.4",
@@ -41,6 +43,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-web-browser": "~14.1.6",
+    "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-cookie": "^8.0.1",
@@ -55,12 +58,12 @@
     "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
-    "react-native-webview": "13.13.5",
-    "expo-linear-gradient": "~14.1.4"
+    "react-native-webview": "13.13.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/jwt-decode": "^2.2.1",
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
