--- a/zivo/package.json
+++ b/zivo/package.json
@@ -17,26 +17,23 @@
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-cookies/cookies": "^6.2.1",
-    "@react-native-picker/picker": "2.11.0",
     "@react-navigation/bottom-tabs": "^7.2.1",
     "@react-navigation/native": "^7.1.6",
-    "@react-navigation/native-stack": "^7.3.8",
     "@tanstack/react-query": "^5.71.5",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
-    "expo": "^53.0.5",
+    "expo": "53.0.9",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.0",
     "expo-haptics": "~14.1.4",
-    "expo-image": "^2.1.6",
+    "expo-image": "~2.1.7",
     "expo-image-picker": "^16.1.4",
     "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-location": "~18.1.4",
-    "expo-router": "~5.0.4",
+    "expo-linking": "~7.1.5",
+    "expo-location": "~18.1.5",
+    "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -46,16 +43,11 @@
     "jwt-decode": "^4.0.0",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
-    "react-cookie": "^8.0.1",
-    "react-dom": "19.0.0",
     "react-native": "0.79.2",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-maps": "1.20.1",
     "react-native-modal": "^14.0.0-rc.1",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
     "react-native-toast-message": "^2.3.0",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5"
@@ -67,10 +59,20 @@
     "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.3",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "18.3.1",
     "tailwindcss": "^3.3.2",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": [
+          "jwt-decode",
+          "date-fns-tz"
+        ]
+      }
+    }
+  }
 }
