--- a/zivo/eas.json
+++ b/zivo/eas.json
@@ -15,6 +15,9 @@
       "autoIncrement": true,
       "android": {
         "buildType": "apk"
+      },
+      "env": {
+        "EXPO_DEBUG": "true"
       }
     }
   },
