--- a/zivo/app.json
+++ b/zivo/app.json
@@ -4,7 +4,7 @@
     "slug": "zivo",
     "version": "1.0.0",
     "orientation": "portrait",
-    "icon": "./assets/images/logo.png",
+    "icon": "./assets/images/logo.jpg",
     "scheme": "myapp",
     "userInterfaceStyle": "automatic",
     "newArchEnabled": true,
