--- a/zivo/package.json
+++ b/zivo/package.json
@@ -52,6 +52,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jwt-decode": "^2.2.1",
+    "@types/lodash": "^4.17.16",
     "@types/react": "~19.0.10",
     "jest-expo": "~53.0.5",
     "tailwindcss": "^3.3.2",
