--- a/zivo/app.json
+++ b/zivo/app.json
@@ -44,6 +44,12 @@
       "eas": {
         "projectId": "fbc322a0-1a7b-4afd-8d68-dd6e64cf5c06"
       }
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    },
+    "updates": {
+      "url": "https://u.expo.dev/fbc322a0-1a7b-4afd-8d68-dd6e64cf5c06"
     }
   }
 }
